--- a/first/index.html
+++ b/first/index.html
@@ -6,8 +6,10 @@
     </head>
 
     <body>
-        <img src="https://dmm0a91a1r04e.cloudfront.net/O1iKzzgFsql_LJg6Lc6y_EO3Psc=/1024x1024/https%3A%2F%2Fkompas.id%2Fwp-content%2Fuploads%2F2018%2F11%2FDaQQzpKUMAAZtck_1542890285.jpg x 750"
-        <h1>Kopi Pagi</h1>
+        <h1><img src="../first/image/INDngopi.jpg" width="60" alt="INDngopi logo, Kopi indonesia">
+
+         <strong>Kopi Pagi</strong></h1>
+         
 
         <h2>Pantauan Terkini Semeru Erupsi, Guguran Awan Panas Sejauh 7 Km hingga Himbauan PVMBG</h2>
 
@@ -21,7 +23,7 @@
 
             <p>Editor : &rdquo;Lord Ziaga&ldquo;</p>
 
-            <p>Download aplikasi Kompas.com untuk akses berita lebih mudah dan cepat:
+            <p>Download aplikasi <b>Kompas.com</b> untuk akses berita lebih mudah dan cepat:
             <ul>
                 <li><a href="https://bit.ly/3g85pkA">Android</a></li>
                 <li><a href="https://apple.co/3hXWJ0L:">ios</a></li>
